--- a/src/app/admin-groups/admin-groups.component.css
+++ b/src/app/admin-groups/admin-groups.component.css
@@ -40,16 +40,6 @@
     position: relative;
 }
 
-.event-filter > *:nth-child(3) {
-    position: absolute;
-    right: 0;
-}
-
-.event-filter > *:nth-child(2) {
-    position: absolute;
-    left: 0;
-    right: 0;
-}
 
 .filter {
     text-align: center;
@@ -192,3 +182,8 @@ select {
     border: 1px solid black;
     border-radius: 5px;
 }
+
+.checked {
+    background-color: green;
+  }
+  
