--- a/src/app/activities/activities.component.html
+++ b/src/app/activities/activities.component.html
@@ -41,9 +41,7 @@
         <h1>USUARIOS</h1>
         <div class="users-list">
           <ul>
-            <li>Usuario 1</li>
-            <li>Usuario 2</li>
-            <li>Usuario 3</li>
+            <li *ngFor="let user of usersList">{{ user.name }}</li>
           </ul>
         </div>
       </div>
