--- a/src/app/manage-members-pop-up/manage-members-pop-up.component.html
+++ b/src/app/manage-members-pop-up/manage-members-pop-up.component.html
@@ -28,12 +28,12 @@
             <th>Nombre</th>
             <th>Usuario</th>
             <th>Correo</th>
-            <th>Rol</th> <!-- Se añade el encabezado para el campo de rol -->
+            <th>Rol</th>
           </tr>
         </thead>
         <tbody>
-          <ng-container *ngIf="organization && organization.members">
-            <tr *ngFor="let member of organization.members">
+          <ng-container *ngIf="usersAdded">
+            <tr *ngFor="let member of usersAdded">
               <td>{{ member.name }}</td>
               <td>{{ member.username }}</td>
               <td>{{ member.email }}</td>
