--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,6 +18,7 @@
                     Planifica y recuerda eventos importantes sin complicaciones.
                     Simplifica tu agenda y evita conflictos con una solución intuitiva. Aprovecha al máximo tu tiempo cada día.
                   </div>
+                  <img src="../../assets/img/home1.PNG" alt="">
                 </div>
 
                 <div class="card short">
