Implemented add event to calendar.component.ts

--- a/src/app/admin-add-event/admin-add-event.component.html
+++ b/src/app/admin-add-event/admin-add-event.component.html
@@ -78,9 +78,11 @@
                             <div class="event-data">
                                 <p>Repetir</p>
                                 <select name="event-repeat" id="">
-                                    <option value="none">Ninguna</option>
-                                    <option value="daily">Diario</option>
-                                    <option value="weekly">Semanal</option>
+                                    <option value="Ninguno">Ninguno</option>
+                                    <option value="Diario">Diario</option>
+                                    <option value="Semanal">Semanal</option>
+                                    <option value="Mensual">Mensual</option>
+                                    <option value="Anual">Anual</option>
                                 </select>
                             </div>
                         </div>
