--- a/src/app/admin-groups/admin-groups.component.css
+++ b/src/app/admin-groups/admin-groups.component.css
@@ -49,7 +49,7 @@
 .filter select {
     margin-top: 8px;
     width: 200px;
-    height: 30px;
+    height: fit-content;
 }
 
 
@@ -65,7 +65,7 @@
     display: flex;
     flex-direction: row;
     gap: 100px;
-    width: 30%; 
+    width: 30%;
     align-items: center;
 }
 
@@ -169,7 +169,7 @@ th, td {
     border-radius: 5px;
     box-sizing: border-box;
   }
-  
+
 .time-interval-input  {
     align-items: center;
     font-size: x-large;
@@ -186,4 +186,3 @@ select {
 .checked {
     background-color: green;
   }
-  
